welcome.lessons.welcome.bat.bool1.Makes10.scala.code
def makes10(a:Int, b:Int):Boolean = {
	if ( a = 10 || b =10 ) {true} else {
		if ( a+b = 10 ) {true} else { false}
	}
}
